--- a/works.html
+++ b/works.html
@@ -104,7 +104,7 @@
                     <div class="work-item" data-category="programming">
                         <div class="card work-card-inner">
                             <span class="work-tag">Programming</span>
-                            <h3><a href="html.html">Old Main HTML</a></h3>
+                            <h3><a href="Works/html.html">Old Main HTML</a></h3>
                             <p style="color: var(--text-secondary); margin-top: 0.5rem; flex-grow: 1;">
                                 初期のHTML学習用のファイル。基本的なタグ構造とレイアウトの実験が含まれています。
                             </p>
