--- a/works.html
+++ b/works.html
@@ -108,7 +108,7 @@
                             <p style="color: var(--text-secondary); margin-top: 0.5rem; flex-grow: 1;">
                                 初期のHTML学習用のファイル。基本的なタグ構造とレイアウトの実験が含まれています。
                             </p>
-                            <a href="html.html"
+                            <a href="Works/html.html"
                                 style="color: var(--primary-color); margin-top: 1rem; font-weight: 600;">View Code
                                 &rarr;</a>
                         </div>
