--- a/works.html
+++ b/works.html
@@ -104,11 +104,11 @@
                     <div class="work-item" data-category="programming">
                         <div class="card work-card-inner">
                             <span class="work-tag">Programming</span>
-                            <h3><a href="Works/html.html">Old Main HTML</a></h3>
+                            <h3>Old Main HTML</h3>
                             <p style="color: var(--text-secondary); margin-top: 0.5rem; flex-grow: 1;">
                                 初期のHTML学習用のファイル。基本的なタグ構造とレイアウトの実験が含まれています。
                             </p>
-                            <a href="Works/html.html"
+                            <a href="./Works/html.html"
                                 style="color: var(--primary-color); margin-top: 1rem; font-weight: 600;">View Code
                                 &rarr;</a>
                         </div>
