--- a/Works/TOEIC/1/index.html
+++ b/Works/TOEIC/1/index.html
@@ -12,6 +12,7 @@
         <center>
             <a href="problems.html">問題に進む</a>
         </center>
-        
+
+        <a href="../../../works.html">作品ページに戻る</a>
     </body>
 </html>
