--- a/works.html
+++ b/works.html
@@ -162,6 +162,20 @@
                                 Soon)</span>
                         </div>
                     </div>
+
+                    <!-- TOEIC problem website -->
+                    <div class="work-item" data-category="programming">
+                        <div class="card work-card-inner">
+                            <span class="work-tag">programing</span>
+                            <h3>TOEIC problem website</h3>
+                            <p style="color: var(--text-secondary); margin-top: 0.5rem; flex-grow: 1;">
+                                初期のHTML学習用のファイル。基本的なタグ構造とレイアウトの実験が含まれています。
+                            </p>
+                            <a href="./Works/TOEIC/1/index.html"
+                                style="color: var(--primary-color); margin-top: 1rem; font-weight: 600;">View Code
+                                &rarr;</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
