--- a/works.html
+++ b/works.html
@@ -169,7 +169,7 @@
                             <span class="work-tag">programing</span>
                             <h3>TOEIC problem website</h3>
                             <p style="color: var(--text-secondary); margin-top: 0.5rem; flex-grow: 1;">
-                                初期のHTML学習用のファイル。基本的なタグ構造とレイアウトの実験が含まれています。
+                                TOEICの勉強を習慣化するために作成したサイト。他の人にも問題の楽しさを共有してもらいたくて作成しました。
                             </p>
                             <a href="./Works/TOEIC/1/index.html"
                                 style="color: var(--primary-color); margin-top: 1rem; font-weight: 600;">View Code
