--- a/works.html
+++ b/works.html
@@ -174,6 +174,9 @@
                             <a href="./Works/TOEIC/1/index.html"
                                 style="color: var(--primary-color); margin-top: 1rem; font-weight: 600;">View Code
                                 &rarr;</a>
+                            <a href="./Works/TOEIC/2/index.html"
+                                style="color: var(--primary-color); margin-top: 1rem; font-weight: 600;">View Code
+                                &rarr;</a>
                         </div>
                     </div>
                 </div>
