--- a/works.html
+++ b/works.html
@@ -172,10 +172,10 @@
                                 TOEICの勉強を習慣化するために作成したサイト。他の人にも問題の楽しさを共有してもらいたくて作成しました。
                             </p>
                             <a href="./Works/TOEIC/1/index.html"
-                                style="color: var(--primary-color); margin-top: 1rem; font-weight: 600;">View Code
+                                style="color: var(--primary-color); margin-top: 1rem; font-weight: 600;">View Code HTMLonly版
                                 &rarr;</a>
                             <a href="./Works/TOEIC/2/index.html"
-                                style="color: var(--primary-color); margin-top: 1rem; font-weight: 600;">View Code
+                                style="color: var(--primary-color); margin-top: 1rem; font-weight: 600;">View Code JavaScript対応版
                                 &rarr;</a>
                         </div>
                     </div>
